# pubmed_fetcher_task

./: README.md  output.csv  pyproject.toml  results.csv  test.csv
src/pubmed_fetcher_task/: cli.py  core.py
tests/: test_core.py
