[project]
name = "pubmed-fetcher-task"
version = "0.1.2"
description = "Fetch PubMed papers with pharma/biotech affiliations"
authors = [
    {name = "Thamu123",email = "vmanivmani95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pubmed_fetcher_task", from = "src"}]

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher_task.cli:main"


[tool.poetry.group.dev.dependencies]
twine = "^6.1.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
